Added Working of Contact Us Page and Use Context to prevent the state to reset after the component gets unmount for login users to stay logged in and the icon doesnt change

--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -14,3 +14,17 @@ h4 {
 .Link{
   text-decoration: none;
 }
+
+.menuDiv{
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .menuDiv{
+    display: inline-block;
+  }
+
+  .hide{
+    display: none;
+  }
+}
