--- a/frontend/src/Components/Auth/AuthModal.css
+++ b/frontend/src/Components/Auth/AuthModal.css
@@ -26,3 +26,21 @@
     padding: 5px;
     color: #aaa;
 }
+
+.auth{
+   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 768px) {
+    .auth{
+        width: 300px;
+    }
+}
